# sandbox

thrift/: CMakeLists.txt  generate.sh
thrift/api/: CMakeLists.txt
thrift/api/resource/: calculator.thrift
